Update Missing Collate code for A0141780J

--- a/collated/test/A0141780J.md
+++ b/collated/test/A0141780J.md
@@ -117,6 +117,96 @@ public class FindCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
+###### \java\guitests\guihandles\NotificationPaneHandle.java
+``` java
+/**
+ * Provides a handle for the notification pane.
+ */
+public class NotificationPaneHandle extends GuiHandle {
+    private static final String NOTIFICATION_PANE_ID = "#notificationPane";
+
+    public NotificationPaneHandle(GuiRobot guiRobot, Stage primaryStage) {
+        super(guiRobot, primaryStage, TestApp.APP_TITLE);
+    }
+    
+    public String getText() {
+        return getNotificationPane().getText();
+    }
+    
+    public boolean isShowing() {
+        return getNotificationPane().isShowing();
+    }
+
+    private NotificationPane getNotificationPane() {
+        return ((NotificationPane) getNode(NOTIFICATION_PANE_ID));
+    }
+
+}
+```
+###### \java\guitests\guihandles\PopOverHandle.java
+``` java
+
+/**
+ * A handler for the PopOver of the UI
+ */
+public class PopOverHandle extends GuiHandle {
+
+    public static final String POP_OVER_TEXT_ID = "#popOverText";
+    private static final String POP_OVER_ID = "#popOver";
+
+    public PopOverHandle(GuiRobot guiRobot, Stage primaryStage) {
+        super(guiRobot, primaryStage, TestApp.APP_TITLE);
+    }
+
+    public String getText() {
+        Text popupText = getPopOverText();
+        return popupText.getText();
+    }
+    
+    public boolean isShowing() {
+        return true;
+    }
+    
+    private Text getPopOverText() {
+        Text result = (Text)getNode(POP_OVER_TEXT_ID);
+        return result;
+    }
+}
+```
+###### \java\guitests\guihandles\StatusDisplayPanelHandle.java
+``` java
+
+/**
+ * A handler for the PopOver of the UI
+ */
+public class StatusDisplayPanelHandle extends GuiHandle {
+
+    private static final String PENDING_CHIP_ID = "#pendingChip";
+    private static final String OVERDUE_CHIP_ID = "#overdueChip";
+    private static final String DONE_CHIP_ID = "#doneChip";
+    private static final String ALL_CHIP_ID = "#allChip";
+
+    public StatusDisplayPanelHandle(GuiRobot guiRobot, Stage primaryStage) {
+        super(guiRobot, primaryStage, TestApp.APP_TITLE);
+    }
+    
+    public boolean isAllShown() {
+        return containsNode(ALL_CHIP_ID);
+    }
+    
+    public boolean isDoneShown() {
+        return containsNode(DONE_CHIP_ID);
+    }
+    
+    public boolean isPendingShown() {
+        return containsNode(PENDING_CHIP_ID);
+    }
+    
+    public boolean isOverdueShown() {
+        return containsNode(OVERDUE_CHIP_ID);
+    }
+}
+```
 ###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
